syntax = "proto3";
option java_multiple_files= true;
package com.emreilgar.grpc;

service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse);
}

message DiscountRequest {
  string code = 1;
  float price = 2;
  int64 externalCategoryId = 3;
}

message DiscountResponse {
  string code = 1;
  float newPrice = 2;
  float oldPrice = 3;
  Response response = 4;
}


message Response {
  bool statusCode = 1;
  string message = 2;
}